# clients-monorepo

./: .pre-commit-config.yaml  README.md
TODO clients yet to create/: TODO.md  boto3_utils (mundi).py  boto3_utils (odd-manager).py  dynamodb_utils (mundi).py  dynamodb_utils (odd-manager).py
aws-dynamodb-client/: README.md  pyproject.toml
aws-dynamodb-client/aws_dynamodb_client/: __init__.py  dynamodb_client_base.py  dynamodb_client_base_exceptions.py  dynamodb_client_table.py  dynamodb_client_table_exceptions.py
aws-dynamodb-client/tests/: test_dynamodb_client_table.py
aws-lambda-client/: README.md  pyproject.toml
aws-lambda-client/aws_lambda_client/: __init__.py  aws_lambda_client.py
aws-lambda-client/tests/: test_aws_lambda_client.py
aws-lambda-client/tests/cassettes/test_aws_lambda_client/: TestGetLambdaUrl.test_lambda_doesnt_exists.yaml  TestGetUrl.test_api_gateway_url.yaml  TestGetUrl.test_lambda_url.yaml  TestInvoke.test_async.yaml  TestInvoke.test_happy_flow.yaml  TestInvoke.test_lambda_doesnt_exists.yaml  TestInvoke.test_sync.yaml
aws-parameter-store-client/: Makefile  README.md  pyproject.toml
aws-parameter-store-client/aws_parameter_store_client/: __init__.py  aws_parameter_store_client.py
aws-parameter-store-client/tests/: conftest.py  test_aws_parameter_store_client.py
aws-sns-client/: README.md  pyproject.toml
aws-sns-client/aws_sns_client/: __init__.py  sns_client_base.py  sns_client_base_exceptions.py  sns_client_topic.py  sns_client_topic_exceptions.py
aws-sns-client/tests/: test_sns_client_base.py  test_sns_client_topic.py
(+41 files in other folders)
